--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,12 @@
 [package]
-name = "qos"
+name = "apeclave"
 version = "0.1.0"
-authors = ["Jack Kearney <jack@turnkey.io>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "2.33"
-log = "0.4"
-nix = "0.15"
-byteorder = "1.3"
-ctrlc = "3.2.2"
-
-[workspace]
+nix = { version = "0.24.1", features = ["socket"] }
+structopt = "*"
+ctrlc = "*"
+libc = "*"
