--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "apeclave"
+name = "qos"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 nix = { version = "0.24.1", features = ["socket"] }
-structopt = "*"
-ctrlc = "*"
-libc = "*"
+
+[feature]
+local = []
+vm = []
