--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 [dependencies]
 nix = { version = "0.24.1", features = ["socket"] }
 
+[dev-dependencies]
+async-std = { version = "1.11.0", features = ["attributes"] }
+
 [features]
 default=["local"]
 local = []
