--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
-[package]
-name = "qos"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = [
+  "qos-core",
+  "qos-core-cli",
+  "qos-test"
+]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+# [dependencies]
+# nix = { version = "0.24.1", features = ["socket"] }
 
-[dependencies]
-nix = { version = "0.24.1", features = ["socket"] }
-
-[dev-dependencies]
+# [dev-dependencies]
 # async-std = { version = "1.11.0", features = ["attributes"] }
 
-[features]
-default=["local"]
-local = []
-vm = []
+# [features]
+# default=["local"]
+# local = []
+# vm = []
