--- a/qos-test/Cargo.toml
+++ b/qos-test/Cargo.toml
@@ -6,3 +6,7 @@ publish = false
 
 [dev-dependencies]
 qos-core = { path = "../qos-core" }
+qos-host = { path = "../qos-host" }
+ureq = "2.4"
+futures = "0.3"
+tokio = { version = "1.18", features = ["full"], default-features = false }
