Secret provisioning and end to end test

--- a/qos-core/Cargo.toml
+++ b/qos-core/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+qos-crypto = { path = "../qos-crypto" }
+
 nix = { version = "0.24.1", features = ["socket"], default-features = false }
 
 [features]
