--- a/qos-crypto/Cargo.toml
+++ b/qos-crypto/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8"
+rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
