--- a/qos-core/Cargo.toml
+++ b/qos-core/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 qos-crypto = { path = "../qos-crypto" }
 
 nix = { version = "0.24.1", features = ["socket"], default-features = false }
+aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
 
 [features]
 default=["local"]
