--- a/qos-core/Cargo.toml
+++ b/qos-core/Cargo.toml
@@ -5,9 +5,10 @@ edition = "2021"
 
 [dependencies]
 qos-crypto = { path = "../qos-crypto" }
-
 nix = { version = "0.24.1", features = ["socket"], default-features = false }
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
+serde = "1.0"
+serde_cbor = "0.11"
 
 [features]
 default=["local"]
