--- a/qos-test/Cargo.toml
+++ b/qos-test/Cargo.toml
@@ -11,3 +11,4 @@ qos-host = { path = "../qos-host" }
 qos-crypto = { path = "../qos-crypto" }
 ureq = { version = "2.4", default-features = false }
 tokio = { version = "1.18", features = ["macros", "rt-multi-thread"], default-features = false }
+aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
