--- a/qos-client/Cargo.toml
+++ b/qos-client/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "qos-cli"
+name = "qos-client"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 qos-core = { path = "../qos-core" }
-aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
 
 # Third party
 ureq = { version = "2.4", default-features = false }
