--- a/qos-host/Cargo.toml
+++ b/qos-host/Cargo.toml
@@ -9,3 +9,4 @@ qos-core = { path = "../qos-core" }
 # Third party
 axum = { version = "0.5.4", features = ["http1"], default-features = false }
 tokio = { version = "1.18", features = ["macros", "rt-multi-thread"], default-features = false }
+regex = "1"
