--- a/qos-client/Cargo.toml
+++ b/qos-client/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 qos-core = { path = "../qos-core" }
+qos-host = { path = "../qos-host" }
 
 # Third party
 ureq = { version = "2.4", default-features = false }
