--- a/qos-crypto/Cargo.toml
+++ b/qos-crypto/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
+openssl = "0.10.40"
