--- a/qos-client/Cargo.toml
+++ b/qos-client/Cargo.toml
@@ -13,8 +13,8 @@ ureq = { version = "2.4", default-features = false }
 serde_cbor = "0.11"
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
 
-
 # For handling Attestation Doc
 aws-nitro-enclaves-cose = "0.4.0"
 webpki = "0.22.0"
 x509-parser = "0.13"
+serde_bytes = "0.11"
