Add `mock-attestation` command to client CLI

--- a/qos-core/Cargo.toml
+++ b/qos-core/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 qos-crypto = { path = "../qos-crypto" }
 nix = { version = "0.24.1", features = ["socket"], default-features = false }
-openssl = "0.10.40"
+openssl = { version = "0.10.40", default-features = false }
 
 # For AWS Nitro
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
