--- a/qos-core/Cargo.toml
+++ b/qos-core/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2021"
 [dependencies]
 qos-crypto = { path = "../qos-crypto" }
 nix = { version = "0.24.1", features = ["socket"], default-features = false }
+serde = { version = "1.0", default-features = false, features = ["derive"] }
+serde_cbor = { version = "0.11", default-features = false }
 
 # For AWS Nitro
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
-serde = "1.0"
-serde_cbor = "0.11"
-serde_bytes = "0.11"
+serde_bytes = { version = "0.11", default-features = false }
 
 [features]
 default=["local"]
