--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,35 +6,30 @@ on: [push, pull_request]
 name: PR
 
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target:
-          - ubuntu-latest
-          - macOS-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: ${{ matrix.target }}
-          override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: build
-          args: --release --target=${{ matrix.target }}
+  # build:
+  #   name: Build
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       target:
+  #         - ubuntu-latest
+  #         - macOS-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions-rs/toolchain@v1
+  #       with:
+  #         toolchain: stable
+  #         target: ${{ matrix.target }}
+  #         override: true
+  #     - uses: actions-rs/cargo@v1
+  #       with:
+  #         use-cross: true
+  #         command: build
+  #         args: --release --target=${{ matrix.target }}
 
   test:
     name: Test Suite
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target:
-          - ubuntu-latest
-          - macOS-latest
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
@@ -44,15 +39,12 @@ jobs:
         with:
           profile: minimal
           toolchain: stable
-          target: ${{ matrix.target }}
           override: true
 
       - name: Run cargo test
         uses: actions-rs/cargo@v1
         with:
-          use-cross: true
           command: test
-          args: --target=${{ matrix.target }}
 
   lints:
     name: Lints
