--- a/qos-core/Cargo.toml
+++ b/qos-core/Cargo.toml
@@ -5,10 +5,11 @@ edition = "2021"
 
 [dependencies]
 qos-crypto = { path = "../qos-crypto" }
+
 nix = { version = "0.24.1", features = ["socket"], default-features = false }
-serde = { version = "1.0", default-features = false, features = ["derive"] }
-serde_cbor = { version = "0.11", default-features = false }
 openssl = { version = "0.10.40", default-features = false }
+serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
+serde_cbor = { version = "0.11", default-features = false, features = ["std"] }
 
 # For AWS Nitro
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
