--- a/qos-client/Cargo.toml
+++ b/qos-client/Cargo.toml
@@ -13,6 +13,7 @@ ureq = { version = "2.4", default-features = false }
 serde_cbor = { version = "0.11", default-features = false }
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
 openssl = "0.10.40"
+borsh = { version = "0.9" }
 
 # For handling Attestation Doc
 aws-nitro-enclaves-cose = { version = "0.4.0", default-features = false, features = ["key_openssl_pkey"] }
