Add test for failing BootGenesisResponse deserialization

--- a/qos-test/Cargo.toml
+++ b/qos-test/Cargo.toml
@@ -12,7 +12,7 @@ tokio = { version = "1.18", features = ["macros", "rt-multi-thread"], default-fe
 
 [dev-dependencies]
 qos-crypto = { path = "../qos-crypto" }
-
+borsh = { version = "0.9" }
 openssl = "0.10.40"
 ureq = { version = "2.4", default-features = false }
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
