--- a/qos-core/Cargo.toml
+++ b/qos-core/Cargo.toml
@@ -18,7 +18,7 @@ serde_bytes = { version = "0.11", default-features = false }
 default=["local"]
 # Support for unix sockets
 local = []
-# Support for VSOCL
+# Support for VSOCK
 vm = []
 # Never use in production - support for mock NSM
 mock = []
