--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ members = [
   "qos-host",
   "qos-test",
 ]
+# We need this to avoid issues with the mock feature uinintentionally being
+# enabled just because some tests need it.
+# https://nickb.dev/blog/cargo-workspace-and-the-feature-unification-pitfall/
+resolver = "2"
