--- a/sample-app/Cargo.toml
+++ b/sample-app/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 publish = false
 
 [dependencies]
-qos-core = { path = "../qos-core" }
+qos-core = { path = "../qos-core", default-features = false }
+qos-crypto = { path = "../qos-crypto", default-features = false }
 
 borsh = { version = "0.9" }
 
