--- a/qos-test/Cargo.toml
+++ b/qos-test/Cargo.toml
@@ -7,13 +7,17 @@ publish = false
 [dependencies]
 qos-core = { path = "../qos-core", features = ["local"], default-features = false }
 qos-host = { path = "../qos-host", features = ["local"], default-features = false }
-qos-client = { path = "../qos-client", features = ["mock"], default-features = false }
+qos-client = { path = "../qos-client", default-features = false }
 qos-crypto = { path = "../qos-crypto" }
 tokio = { version = "1.18", features = ["macros", "rt-multi-thread"], default-features = false }
 
 [dev-dependencies]
 qos-core = { path = "../qos-core", features = ["mock","local"], default-features = false }
+qos-client = { path = "../qos-client", features = ["mock"], default-features = false }
 borsh = { version = "0.9" }
 openssl = "0.10.40"
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
 rand = "0.8"
+
+[features]
+mock = ["qos-client/mock"]
