--- a/qos-client/Cargo.toml
+++ b/qos-client/Cargo.toml
@@ -23,7 +23,7 @@ sample-app = { path = "../sample-app", optional = true }
 
 [dev-dependencies]
 # We need mock enabled to grab things related to the mock NSM.
-qos-core = { path = "../qos-core", features = ["mock"], default-features = false }
+qos-core = { path = "../qos-core", features = ["mock", "local"], default-features = false }
 
 [features]
 default = []
