--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           command: test
 
-  rustfmt:``
+  rustfmt:
     name: rustfmt
     runs-on: ubuntu-latest
     steps:
