--- a/qos-client/Cargo.toml
+++ b/qos-client/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-qos-core = { path = "../qos-core", default-features = false, features = ["local"] }
+qos-core = { path = "../qos-core", default-features = false }
 qos-crypto = { path = "../qos-crypto", default-features = false }
 
 # Third party
@@ -23,7 +23,7 @@ sample-app = { path = "../sample-app", optional = true }
 
 [dev-dependencies]
 # We need mock enabled to grab things related to the mock NSM.
-qos-core = { path = "../qos-core", features = ["mock", "local"], default-features = false }
+qos-core = { path = "../qos-core", features = ["mock"], default-features = false }
 
 [features]
 default = []
