--- a/qos-test/Cargo.toml
+++ b/qos-test/Cargo.toml
@@ -5,15 +5,15 @@ edition = "2021"
 publish = false
 
 [dependencies]
-qos-core = { path = "../qos-core", features = ["local"], default-features = false }
-qos-host = { path = "../qos-host", features = ["local"], default-features = false }
+qos-core = { path = "../qos-core", default-features = false }
+qos-host = { path = "../qos-host", default-features = false }
 qos-client = { path = "../qos-client", features = ["sample"], default-features = false }
 qos-crypto = { path = "../qos-crypto" }
 sample-app = { path = "../sample-app" }
 tokio = { version = "1.18", features = ["macros", "rt-multi-thread"], default-features = false }
 
 [dev-dependencies]
-qos-core = { path = "../qos-core", features = ["mock","local"], default-features = false }
+qos-core = { path = "../qos-core", features = ["mock"], default-features = false }
 qos-client = { path = "../qos-client", features = ["mock"], default-features = false }
 borsh = { version = "0.9" }
 openssl = "0.10.40"
