--- a/images/client/Dockerfile
+++ b/images/client/Dockerfile
@@ -1,5 +1,7 @@
 FROM rust:bullseye as builder
 COPY ./ ./
+RUN apt-get update \
+  && apt-get install -y libssl-dev
 RUN cargo build --manifest-path ./qos-client/Cargo.toml --bin qos-client --no-default-features
 
 # We don't need the Rust toolchain to run the binary!
