--- a/sample-app/Cargo.toml
+++ b/sample-app/Cargo.toml
@@ -9,3 +9,6 @@ qos-core = { path = "../qos-core", default-features = false }
 qos-crypto = { path = "../qos-crypto", default-features = false }
 
 borsh = { version = "0.9" }
+
+[features]
+vm = ["qos-core/vm"]
