Remove feature flag

--- a/qos-client/Cargo.toml
+++ b/qos-client/Cargo.toml
@@ -18,8 +18,8 @@ aws-nitro-enclaves-cose = { version = "0.4.0", default-features = false, feature
 webpki = { version =  "0.22.0", default-features = false }
 serde_bytes = { version = "0.11", default-features = false }
 
-# Optional deps
-sample-app = { path = "../sample-app", optional = true }
+# TODO: rip out
+sample-app = { path = "../sample-app" }
 
 [dev-dependencies]
 # We need mock enabled to grab things related to the mock NSM.
@@ -27,4 +27,4 @@ qos-core = { path = "../qos-core", features = ["mock"], default-features = false
 
 [features]
 default = []
-sample = ["sample-app"]
+
