--- a/qos-client/Cargo.toml
+++ b/qos-client/Cargo.toml
@@ -6,17 +6,13 @@ edition = "2021"
 [dependencies]
 qos-core = { path = "../qos-core", default-features = false }
 qos-crypto = { path = "../qos-crypto", default-features = false }
+qos-attest = { path = "../qos-attest", default-features = false }
 
 # Third party
 ureq = { version = "2.4", default-features = false }
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
-openssl = "0.10.40"
-borsh = { version = "0.9" }
 
-# For handling Attestation Doc
-aws-nitro-enclaves-cose = { version = "0.4.0", default-features = false, features = ["key_openssl_pkey"] }
-webpki = { version =  "0.22.0", default-features = false }
-serde_bytes = { version = "0.11", default-features = false }
+borsh = { version = "0.9" }
 
 # TODO: rip out
 sample-app = { path = "../sample-app" }
