--- a/qos-test/Cargo.toml
+++ b/qos-test/Cargo.toml
@@ -9,7 +9,9 @@ qos-core = { path = "../qos-core", default-features = false }
 qos-host = { path = "../qos-host", default-features = false }
 qos-client = { path = "../qos-client", default-features = false }
 qos-crypto = { path = "../qos-crypto" }
+qos-attest = { path = "../qos-attest", default-features = false }
 sample-app = { path = "../sample-app" }
+
 tokio = { version = "1.18", features = ["macros", "rt-multi-thread"], default-features = false }
 
 [dev-dependencies]
