--- a/qos-test/Cargo.toml
+++ b/qos-test/Cargo.toml
@@ -12,12 +12,13 @@ qos-crypto = { path = "../qos-crypto" }
 qos-attest = { path = "../qos-attest", default-features = false }
 qos-hex = { path = "../qos-hex" }
 sample-app = { path = "../sample-app" }
+test-primitives = { path = "../test-primitives" }
 
 tokio = { version = "1.18", features = ["macros", "rt-multi-thread"], default-features = false }
-rand = "0.8"
 
 [dev-dependencies]
 qos-core = { path = "../qos-core", features = ["mock"], default-features = false }
 borsh = { version = "0.9" }
 openssl = "0.10.40"
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
+rand = "0.8"
