--- a/qos-core/Cargo.toml
+++ b/qos-core/Cargo.toml
@@ -15,6 +15,9 @@ borsh = { version = "0.9" }
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
 serde_bytes = { version = "0.11", default-features = false }
 
+[dev-dependencies]
+test-primitives = { path = "../test-primitives" }
+
 [features]
 # Support for VSOCK
 vm = []
