--- a/qos-core/Cargo.toml
+++ b/qos-core/Cargo.toml
@@ -16,7 +16,7 @@ aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
 serde_bytes = { version = "0.11", default-features = false }
 
 [dev-dependencies]
-test-primitives = { path = "../test-primitives" }
+qos-test-primitives = { path = "../qos-test-primitives" }
 
 [features]
 # Support for VSOCK
