--- a/qos-test/Cargo.toml
+++ b/qos-test/Cargo.toml
@@ -12,7 +12,7 @@ qos-crypto = { path = "../qos-crypto" }
 qos-attest = { path = "../qos-attest", default-features = false }
 qos-hex = { path = "../qos-hex" }
 sample-app = { path = "../sample-app" }
-test-primitives = { path = "../test-primitives" }
+qos-test-primitives = { path = "../qos-test-primitives" }
 
 tokio = { version = "1.18", features = ["macros", "rt-multi-thread"], default-features = false }
 
