--- a/integration/Cargo.toml
+++ b/integration/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-qos-core = { path = "../qos-core", features = ["mock"], default-features = false }
+qos_core = { path = "../qos_core", features = ["mock"], default-features = false }
 qos-host = { path = "../qos-host", default-features = false }
 qos-client = { path = "../qos-client", default-features = false }
 qos-crypto = { path = "../qos-crypto" }
@@ -17,7 +17,7 @@ qos-test-primitives = { path = "../qos-test-primitives" }
 tokio = { version = "1.18", features = ["macros", "rt-multi-thread"], default-features = false }
 
 [dev-dependencies]
-qos-core = { path = "../qos-core", features = ["mock"], default-features = false }
+qos_core = { path = "../qos_core", features = ["mock"], default-features = false }
 borsh = { version = "0.9" }
 openssl = "0.10.40"
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
