--- a/qos-client/Cargo.toml
+++ b/qos-client/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-qos-core = { path = "../qos-core", default-features = false }
+qos_core = { path = "../qos_core", default-features = false }
 qos-crypto = { path = "../qos-crypto", default-features = false }
 qos-attest = { path = "../qos-attest", default-features = false }
 qos-hex = { path = "../qos-hex" }
@@ -20,7 +20,7 @@ sample-app = { path = "../sample-app" }
 
 [dev-dependencies]
 # We need mock enabled to grab things related to the mock NSM.
-qos-core = { path = "../qos-core", features = ["mock"], default-features = false }
+qos_core = { path = "../qos_core", features = ["mock"], default-features = false }
 
 [features]
 default = []
