--- a/sample-app/Cargo.toml
+++ b/sample-app/Cargo.toml
@@ -5,10 +5,10 @@ edition = "2021"
 publish = false
 
 [dependencies]
-qos-core = { path = "../qos-core", default-features = false }
+qos_core = { path = "../qos_core", default-features = false }
 qos-crypto = { path = "../qos-crypto", default-features = false }
 
 borsh = { version = "0.9" }
 
 [features]
-vm = ["qos-core/vm"]
+vm = ["qos_core/vm"]
