--- a/qos_client/Cargo.toml
+++ b/qos_client/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "qos-client"
+name = "qos_client"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 qos_core = { path = "../qos_core", default-features = false }
-qos-crypto = { path = "../qos-crypto", default-features = false }
-qos-attest = { path = "../qos-attest", default-features = false }
-qos-hex = { path = "../qos-hex" }
+qos_crypto = { path = "../qos_crypto", default-features = false }
+qos_attest = { path = "../qos_attest", default-features = false }
+qos_hex = { path = "../qos_hex" }
 
 # Third party
 ureq = { version = "2.4", default-features = false }
@@ -16,7 +16,7 @@ aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
 borsh = { version = "0.9" }
 
 # TODO: rip out
-sample-app = { path = "../sample-app" }
+sample_app = { path = "../sample_app" }
 
 [dev-dependencies]
 # We need mock enabled to grab things related to the mock NSM.
