--- a/sample_app/Cargo.toml
+++ b/sample_app/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "sample-app"
+name = "sample_app"
 version = "0.1.0"
 edition = "2021"
 publish = false
 
 [dependencies]
 qos_core = { path = "../qos_core", default-features = false }
-qos-crypto = { path = "../qos-crypto", default-features = false }
+qos_crypto = { path = "../qos_crypto", default-features = false }
 
 borsh = { version = "0.9" }
 
