--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -10,6 +10,7 @@ members = [
   "sample_app",
   "qos_test_primitives",
 ]
+exclude = ["init"]
 # We need this to avoid issues with the mock feature uinintentionally being
 # enabled just because some tests need it.
 # https://nickb.dev/blog/cargo-workspace-and-the-feature-unification-pitfall/
