--- a/src/init/Cargo.toml
+++ b/src/init/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-qos_core = { path = "../qos_core", default-features = false }
+qos_core = { path = "../qos_core", features = ["vm"], default-features = false }
 
 libc = "0.2.134"
 nsm_lib = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", branch = "main", package="nsm-lib", optional = false }
