--- a/src/qos_crypto/Cargo.toml
+++ b/src/qos_crypto/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
 openssl = "0.10.40"
 borsh = { version = "0.9" }
+
+[dev-dependencies]
+qos_hex = { path = "../qos_hex" }
