--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,6 @@ target/
 !src/integration/mock/boot-e2e/all-personal-dir/user2-dir/*
 !src/integration/mock/boot-e2e/all-personal-dir/user3-dir/*
 !src/integration/mock/boot-e2e/genesis-dir/*
+!src/integration/mock/namespaces/quit-coding-to-vape/*
 
 local-enclave/ls
