--- a/src/qos_p256/Cargo.toml
+++ b/src/qos_p256/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 qos_hex = { path = "../qos_hex" }
 
+sha2 = "0.10.6"
 p256 = { version = "0.11.1", features = ["ecdh"] }
 aes = "0.7.5"
 block-modes = "0.8.1"
