--- a/src/qos_p256/Cargo.toml
+++ b/src/qos_p256/Cargo.toml
@@ -8,8 +8,7 @@ qos_hex = { path = "../qos_hex" }
 
 sha2 = "0.10.6"
 p256 = { version = "0.11.1", features = ["ecdh"] }
-aes = "0.7.5"
-block-modes = "0.8.1"
 rand_core = "0.6.3"
 rand = "0.8.5"
 aes-gcm = "0.10.1"
+borsh = { version = "0.9" }
