--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -7,8 +7,8 @@ members = [
   "qos_crypto",
   "qos_host",
   "qos_hex",
-  "aws",
-  "system",
+  "qos_aws",
+  "qos_system",
   "sample_app",
   "qos_test_primitives",
 ]
