--- a/src/qos_p256/Cargo.toml
+++ b/src/qos_p256/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 qos_hex = { path = "../qos_hex" }
 
 sha2 = "0.10.6"
-p256 = { version = "0.11.1", features = ["ecdh"] }
+p256 = { version = "0.11.1", features = ["ecdh", "ecdsa", "ecdsa-core", ] }
 rand_core = "0.6.3"
 rand = "0.8.5"
 aes-gcm = "0.10.1"
