Use HmacSha512 to create AES-GCM shared key

--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -7,13 +7,11 @@ members = [
   "qos_crypto",
   "qos_host",
   "qos_hex",
-  "qos_aws",
-  "qos_system",
   "sample_app",
   "qos_test_primitives",
   "qos_p256"
 ]
-exclude = ["init"]
+exclude = ["init", "qos_aws", "qos_system"]
 # We need this to avoid issues with the mock feature uinintentionally being
 # enabled just because some tests need it.
 # https://nickb.dev/blog/cargo-workspace-and-the-feature-unification-pitfall/
