--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -9,7 +9,7 @@ members = [
   "qos_hex",
   "sample_app",
   "qos_test_primitives",
-  "qos_p256"
+  "qos_p256",
 ]
 exclude = ["init", "qos_aws", "qos_system"]
 # We need this to avoid issues with the mock feature uinintentionally being
