--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,8 @@ target/
 !src/integration/mock/boot-e2e/all-personal-dir/user3-dir/*
 !src/integration/mock/boot-e2e/genesis-dir/*
 src/integration/mock/pivot-build-fingerprints.txt
+src/integration/pivot_ok2_works
+src/integration/pivot_ok_works
+src/integration/pivot_ok3_works
 
 local-enclave/ls
