--- a/src/qos_p256/Cargo.toml
+++ b/src/qos_p256/Cargo.toml
@@ -13,6 +13,7 @@ p256 = { version = "0.11.1", features = ["ecdh", "ecdsa", "ecdsa-core", "std"], 
 aes-gcm = { version = "0.10.1", features = ["aes", "alloc"], default-features = false }
 hmac = { version = "0.12", default-features = false }
 hkdf = { version = "0.12", default-features = false }
+zeroize = { version = "1.5", features = ["derive"], default-features = false }
 
 [dev-dependencies]
 qos_test_primitives = { path = "../qos_test_primitives" }
