WIP about to delete

--- a/src/qos_attest/Cargo.toml
+++ b/src/qos_attest/Cargo.toml
@@ -8,7 +8,10 @@ qos_core = { path = "../qos_core", default-features = false }
 qos_hex = { path = "../qos_hex" }
 
 aws-nitro-enclaves-nsm-api = { version = "0.2.1", default-features = false }
-aws-nitro-enclaves-cose = { version = "0.4.0", default-features = false, features = ["key_openssl_pkey"] }
+
+aws-nitro-enclaves-cose = { git = "https://github.com/emostov/aws-nitro-enclaves-cose" }
 webpki = { version =  "0.22.0", default-features = false }
 serde_bytes = { version = "0.11", default-features = false }
 openssl = "0.10.40"
+p384 = { version = "0.11", features = ["sha384", "ecdsa"] }
+serde_cbor = "0.11"
